--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -77,12 +77,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 html {
-  background-color: #023E54; 
-  background-image: url(images/fallback-gradient.png); 
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#023E54), to(#10AAC0));
-  background-image: -webkit-linear-gradient(top, #023E54, #10AAC0); 
-  background-image: -moz-linear-gradient(top, #023E54, #10AAC0);
-  background-image: -o-linear-gradient(top, #023E54, #10AAC0);
+  background-color: #5cc0b3; 
   min-height: 100%;
   height: auto;
 }
@@ -95,14 +90,14 @@ body  {
 }
 
 main {
-  background: #FCF4DC;
+  background: #bddcfc;
   width: 80%;
   min-width: 310px;
   max-width: 700px;
   margin: 0 auto;
   padding: 10px 20px;
   text-align: center;
-  border-radius: 10px;
+  border-radius: 4px;
   -webkit-box-shadow: 0px 0px 4px 0px black;
     box-shadow: 5px 5px 20px rgba(0,0,0,0.2);
   position: relative;
@@ -172,7 +167,7 @@ input {
   color: #475B62;
   background: rgba(255,255,255,0.4);
   border: 1px solid white;
-  border-radius: 10px;
+  border-radius: 4px;
   outline: 0;
 }
 
@@ -299,7 +294,7 @@ p.error {
 .search input[type="checkbox"] {
   display: inline;
     background-color: #ddd;
-    border-radius: 10px;
+    border-radius: 4px;
     display: inline-block;
     margin-right: 15px;
     -webkit-appearance: none;
@@ -359,7 +354,7 @@ p.error {
   width: 50%;
   float: left;
   padding: 8px;
-  border-radius: 10px;
+  border-radius: 4px;
   margin-bottom: 10px;
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
@@ -537,7 +532,7 @@ nav ul li a:hover {
   background: #E5DEC8;
   padding: 5px 20px 8px 15px;
   margin: 3px 10px;
-  border-radius: 10px;
+  border-radius: 4px;
   border: 2px solid white;
 }
 
@@ -569,7 +564,7 @@ nav ul li a:hover {
   margin-bottom: 5px;
   pointer-events: none;
   position: absolute;
-  border-radius: 10px;
+  border-radius: 4px;
   box-shadow: none;
   border: 2px solid white;
   -webkit-transform: translateY(25px);
