--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -113,7 +113,7 @@ main {
 
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Bree Serif', serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: normal;
   color: #475b62;
   text-shadow: 1px 1px rgb(255,255,255, 1);
@@ -121,7 +121,7 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
   color: #145266;
-  font-family: Bree Serif, serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
@@ -271,7 +271,7 @@ p.error {
   border-radius: 20px;
   text-align: left;
   font-size: 1.1rem;
-  font-family: Bree Serif, serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .search h2 {
@@ -460,13 +460,13 @@ nav ul {
 nav ul li {
   float: left;
   color: #145266;
-  font-family: Bree Serif, serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 nav ul li.user {
   background-color: #D24244;
   color: #EFC94C;
-  font-family: Bree Serif, serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 nav ul li.user.hello {
@@ -488,7 +488,7 @@ nav ul li a:hover {
 .userinfo {
   text-align: center;
   color: #E0E7AB;
-  font-family: Bree Serif, serif;
+  font-family: Arial, Helvetica, sans-serif;
   padding-bottom: 5px;
 }
 
