--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -77,7 +77,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 html {
-  background-color: #5cc0b3; 
+  background-color: #d6e4e1; 
   min-height: 100%;
   height: auto;
 }
@@ -90,7 +90,7 @@ body  {
 }
 
 main {
-  background: #bddcfc;
+  background: #fc756d;
   width: 80%;
   min-width: 310px;
   max-width: 700px;
@@ -120,7 +120,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-  color: #145266;
+  color: #349dff;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -437,7 +437,7 @@ ul.awardslist li .btn-delete {
 
 nav {
   width: 100%;
-  background: #EFC94C;
+  background: transparent;
 }
 
 nav .table {
@@ -448,8 +448,8 @@ nav .table {
 nav li.branding a {
   font-size: 1.5em;
   text-align: left;
-  background: #1E9382;
-  color: #A2CFA5;
+  background: transparent;
+  color: #f93e3b;
 }
 
 nav ul {
@@ -481,8 +481,8 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  background-color: #45B29D;
-  color: #E0E7AB;
+  background-color: #c4d2d0;
+  color: #3979b4;
 }
 
 .userinfo {
