--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -90,7 +90,8 @@ body  {
 }
 
 main {
-  background: #fc756d;
+  background: #fafdff;
+  border: 2px solid #fc756d;
   width: 80%;
   min-width: 310px;
   max-width: 700px;
