--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -86,7 +86,7 @@ body  {
   font-family: Merriweather, serif;
   font-size: 1rem;
   line-height: 160%;
-  *zoom: 1;
+  padding: 0 30px;
 }
 
 main {
@@ -98,7 +98,6 @@ main {
   margin: 0 auto;
   padding: 20px 30px;
   text-align: center;
-  border-radius: 4px;
   -webkit-box-shadow: 0px 0px 4px 0px black;
     box-shadow: 5px 5px 20px rgba(0,0,0,0.2);
   position: relative;
@@ -150,6 +149,9 @@ h3{
 }
 
 p {
+  font-size: 0.9em;
+  color: #686868;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 a.small {
@@ -164,11 +166,12 @@ input {
   width: 100%;
   display: inline-block;
   padding: 10px 0 10px 15px;
-  font-size: 1rem;
-  color: #475B62;
+  font-size: 0.8rem;
+  font-style: italic;
+  color: #7a7a7a;
   background: rgba(255,255,255,0.4);
-  border: 1px solid #ffbf73;
-  border-radius: 4px;
+  border: 1px solid #6fd4ff;
+  border-radius: 8px;
   outline: 0;
   margin-bottom: 1em;
   margin-top: 1em;
@@ -198,7 +201,6 @@ p.error {
   color: #e40d00;
   font-size: .8em;
   padding-top: 5px;
-  margin-bottom: 1em;
   font-style: italic;
 }
 
