--- a/builds/development/views/nav.html
+++ b/builds/development/views/nav.html
@@ -1,6 +1,6 @@
 <div class="table">
 	<ul>
-		<li class="branding"><a ng-href="#/">angularData</a></li>
+		<li class="branding"><a ng-href="#/">TurningPoint</a></li>
 		<li><a ng-href="#/meetings">Meetings</a></li>
 		<li><a ng-href="#/login">Login</a></li>
 		<li><a ng-href="#/register">Register</a></li>
