--- a/builds/development/views/login.html
+++ b/builds/development/views/login.html
@@ -1,6 +1,6 @@
 <section class="login">
 	<form name="myform" novalidate>
-		<h1>Hi there!</h1>
+		<h1>Hi there! {{name}}</h1>
 		<p>Log-in to access site features!</p>
 
 		<input type="email" name="email" placeholder="Email" autofocus
@@ -19,7 +19,8 @@
 			Password is required</p>
 
 
-		<button type="submit" class="btn">Login</button>
+		<button type="submit" class="btn"
+			ng-disabled="myform.$invalid">Login</button>
 		<p>or <a href="#/register">register</a></p>
 	</form>
 </section>
