adding form for Registration view

--- a/builds/development/views/login.html
+++ b/builds/development/views/login.html
@@ -6,7 +6,7 @@
 		<h1>Hi there!</h1>
 		<p>Log-in to access site features!</p>
 
-		<input type="email" name="email" placeholder="Email" autofocus
+		<input type="email" name="email" placeholder="Email"
 			ng-model="user.email" ng-required="true">
 
 		<p class="error" 
