--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -533,16 +533,17 @@ nav ul li a:hover {
 }
 
 .meetings h2 {
-  padding-bottom: 5px;
+  padding-bottom: 15px;
 }
 
 .meetings .meeting {
   display: inline-block;
-  background: #E5DEC8;
+  background: #b8efff;
   padding: 5px 20px 8px 15px;
-  margin: 3px 10px;
+  margin: 5px 10px;
   border-radius: 4px;
   border: 2px solid white;
+  width: 80%;
 }
 
 .meetings .meeting .btn {
