--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -540,11 +540,12 @@ nav ul li a:hover {
 .meetings .meeting {
   display: inline-block;
   background: #b8efff;
-  padding: 5px 20px 8px 15px;
+  padding: 5px 20px;
   margin: 5px 10px;
   border-radius: 4px;
-  border: 2px solid white;
+  border: 1px solid #2c86ff;
   width: 80%;
+  text-align: left;
 }
 
 .meetings .meeting .btn {
@@ -554,7 +555,9 @@ nav ul li a:hover {
 
 .meetings .meeting .text {
   display: inline-block;
-  vertical-align: bottom;
+  font-size: 0.8em;
+  font-family: Arial, Helvetica, sans-serif;
+  /*vertical-align: bottom;*/
 }
 
 .meetings .meeting .text a{
