--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -520,11 +520,11 @@ nav ul li a:hover {
 .addmeeting .inputwrapper input {
     float: left;
     width: 100%;
+    margin-left: 20px;
 }
 
 .addmeeting button {
-  width: 60px;
-  margin-left: 20px;
+  width: 35px;
   vertical-align: center;
 }
 
@@ -540,7 +540,7 @@ nav ul li a:hover {
 .meetings .meeting {
   display: inline-block;
   background: #b8efff;
-  padding: 5px 20px;
+  padding: 0 20px;
   margin: 5px 10px;
   border-radius: 4px;
   border: 1px solid #2c86ff;
@@ -551,6 +551,8 @@ nav ul li a:hover {
 .meetings .meeting .btn {
   margin-right: 4px;
   padding: 1px 8px;
+  margin-bottom: .5em;
+  margin-top: .5em;
 }
 
 .meetings .meeting .text {
