--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -496,17 +496,22 @@ nav ul li a:hover {
 
 .userinfo {
   text-align: center;
-  color: #E0E7AB;
+  color: #848484;
   font-family: Arial, Helvetica, sans-serif;
   padding-bottom: 5px;
 }
 
 .userinfo a {
-  color: #EFC94C;
+  color: #349dff;
+  font-size: 0.8em;
 }
 
 .userinfo input {
     width: auto;
+}
+
+.user {
+  font-size: 0.8em;
 }
 
 .addmeeting {
