--- a/builds/development/views/login.html
+++ b/builds/development/views/login.html
@@ -4,7 +4,7 @@
 		novalidate>
 
 		<h1>Hi there!</h1>
-		<p>Log-in to access site features!</p>
+		<p style="color:#bcbcbc; font-weight:lighter;">Log-in to access site features!</p>
 
 		<input type="email" name="email" placeholder="Email"
 			ng-model="user.email" ng-required="true">
