--- a/builds/development/views/nav.html
+++ b/builds/development/views/nav.html
@@ -1,6 +1,6 @@
 <div class="table">
 	<ul>
-		<li class="branding"><a ng-href="#/">#MeetSmart</a></li>
+		<li class="branding"><a ng-href="#/">#MeetPoint</a></li>
 		<li ng-show="userEmail"><a ng-href="#/meetings">Meetings</a></li>
 		<li ng-hide="userEmail"><a ng-href="#/login">Login</a></li>
 		<li ng-hide="userEmail"><a ng-href="#/register">Register</a></li>
