Smallest style tweak ever

--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -235,7 +235,7 @@ p.error {
     vertical-align: middle;
     cursor: pointer;
     border-radius: 4px;
-    background: #E84254;
+    background: #C61C6F;
     color: #FCF4DC;
     background-color: #24C2B6;
     background-size: 18px 18px;
