--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -1,26 +1,35 @@
 <section class="meetings cf">
 
-	<h1>Add Meetings</h1>
-	<form class="formgroup addmeeting cf"
-		name="myform"
-		ng-submit="addMeeting()"
-		novalidate>
-
-		<div class="inputwrapper">
-			<input type="text" name="meetingname" placeholder="Meeting Name" 
-			ng-model="meetingname"
-			ng-required="true">
-		</div>
-		<button class="btn" type="submit" 
-			ng-disabled="myform.$invalid">+</button>
-	</form>
-
-
-	<h3>Your Meetings</h3>
-	<div class="meeting" ng-repeat="(key, meeting) in meetings">
-		<button class="btn btn-delete tooltip"
-			ng-click="deleteMeeting(key)">
-			<span>Delete this meeting</span></button>
-		<span class="text">{{meeting.name}}</span>
+	<div ng-hide="signedIn()" class="sorry">
+		<h1>Sorry</h1>
+		<p>Only registered users can create and manage meetings.</p>
+		<p>Please <a ng-href="#/register">register</a> or <a ng-href="#/login">login</a></p>
 	</div>
+
+	<div ng-show="signedIn()" class="displayMeetings">
+		<h1>Add Meetings</h1>
+		<form class="formgroup addmeeting cf"
+			name="myform"
+			ng-submit="addMeeting()"
+			novalidate>
+
+			<div class="inputwrapper">
+				<input type="text" name="meetingname" placeholder="Meeting Name" 
+				ng-model="meetingname"
+				ng-required="true">
+			</div>
+			<button class="btn" type="submit" 
+				ng-disabled="myform.$invalid">+</button>
+		</form>
+
+
+		<h3>Your Meetings</h3>
+		<div class="meeting" ng-repeat="(key, meeting) in meetings">
+			<button class="btn btn-delete tooltip"
+				ng-click="deleteMeeting(key)">
+				<span>Delete this meeting</span></button>
+			<span class="text">{{meeting.name}}</span>
+		</div> <!-- Meetings List -->
+	</div> <!-- Display Meetings -->
+
 </section>
