--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -27,7 +27,7 @@
 		<div class="meeting" ng-repeat="(key, meeting) in meetings">
 			<button class="btn btn-delete tooltip"
 				ng-click="deleteMeeting(key)">
-				<span>Delete this meeting</span></button>
+				<span>Delete</span></button>
 			<span class="text">{{meeting.name}}</span>
 		</div> <!-- Meetings List -->
 	</div> <!-- Display Meetings -->
