--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -1,13 +1,23 @@
 <section class="meetings cf">
 
 	<div ng-hide="signedIn()" class="sorry">
-		<h1>Sorry</h1>
-		<p>Only registered users can create and manage meetings.</p>
-		<p>Please <a ng-href="#/register">register</a> or <a ng-href="#/login">login</a></p>
+		<h1>Welcome</h1>
+		<br>
+		<p>Only registered users may access the meetings.</p>
+		<br>
+		<p>Please <a ng-href="#/login">login</a> or <a ng-href="#/register">register</a></p>
 	</div>
 
 	<div ng-show="signedIn()" class="displayMeetings">
-		<h1>Add Meetings</h1>
+		<h1 ng-if="howManyMeetings > 0">Your Meetings</h1>
+		<div class="meeting" ng-repeat="(key, meeting) in meetings">
+			<button class="btn btn-delete tooltip"
+				ng-click="deleteMeeting(key)">
+				<span>Delete</span></button>
+			<span class="text">{{meeting.name}}</span>
+		</div> <!-- Meetings List -->
+		<br>
+		<h3>Add Meetings</h3>
 		<form class="formgroup addmeeting cf"
 			name="myform"
 			ng-submit="addMeeting()"
@@ -23,13 +33,6 @@
 		</form>
 
 
-		<h3 ng-if="howManyMeetings > 0">Your Meetings</h3>
-		<div class="meeting" ng-repeat="(key, meeting) in meetings">
-			<button class="btn btn-delete tooltip"
-				ng-click="deleteMeeting(key)">
-				<span>Delete</span></button>
-			<span class="text">{{meeting.name}}</span>
-		</div> <!-- Meetings List -->
 	</div> <!-- Display Meetings -->
 
 </section>
