--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -510,8 +510,10 @@ nav ul li a:hover {
 
 footer {
   height: 150px;
-  background-color: #242424;
+  background-color: #0049c6;
   width: 100%;
+  position: fixed;
+  bottom: 0;
 }
 
 .userinfo {
