--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -509,7 +509,7 @@ nav ul li a:hover {
 }
 
 footer {
-  height: 150px;
+  height: 10%;
   background-color: #0049c6;
   width: 100%;
   position: fixed;
