--- a/builds/development/views/meetings.html
+++ b/builds/development/views/meetings.html
@@ -11,6 +11,11 @@
 	<div ng-show="signedIn()" class="displayMeetings">
 		<h1 ng-if="howManyMeetings > 0">Your Meetings</h1>
 		<div class="meeting" ng-repeat="(key, meeting) in meetings">
+
+			<a class="btn btn-checkin tooltip"
+				ng-href="#/checkins/{{currentUser.regUser}}/{{key}}">
+				<span>Check In</span></a>
+
 			<button class="btn btn-delete tooltip"
 				ng-click="deleteMeeting(key)">
 				<span>Delete</span></button>
