--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -235,7 +235,7 @@ p.error {
     vertical-align: middle;
     cursor: pointer;
     border-radius: 4px;
-    background: #C61C6F;
+    background: #E84254;
     color: #FCF4DC;
     background-color: #24C2B6;
     background-size: 18px 18px;
@@ -568,7 +568,7 @@ footer {
 .meetings .meeting {
   display: inline-block;
   background: #EEFAFB;
-  padding: 0 20px;
+  padding: 0 10px 0 20px;
   margin: 5px 10px;
   border-radius: 4px;
   border: 1px solid #24C2B6;
@@ -581,6 +581,7 @@ footer {
   margin-bottom: .5em;
   margin-top: .5em;
   float: right;
+  margin-right: 3px;
 }
 
 .meetings .meeting .text {
