--- a/builds/development/views/nav.html
+++ b/builds/development/views/nav.html
@@ -1,6 +1,6 @@
 <div class="table">
+	<h2 align="center" style="color:#fcee8b">MEETPOINT</h2>
 	<ul>
-		<li class="branding"><a ng-href="#/">MeetingPoint</a></li>
 		<li ng-show="currentUser"><a ng-href="#/meetings">Meetings <span ng-if="howManyMeetings>0">({{howManyMeetings}})</span></a></li>
 		<li ng-hide="currentUser"><a ng-href="#/login">Login</a></li>
 		<li ng-hide="currentUser"><a ng-href="#/register">Register</a></li>
